--- a/test.env
+++ b/test.env
@@ -1,3 +1,3 @@
-bot_token =""
+bot_token ="@BotFather"
 channel_link = "https://t.me/OFFpoliceChannel"
-channel_id = ""
+channel_id = "@username_to_id_bot"
