--- a/test.env
+++ b/test.env
@@ -1,4 +1,5 @@
-#Первое вам следует убедиться что вы указали правильные данные в файле ".env" а именно "channel_link" ссылка на телеграм канал, "channel_id" идентификатор телеграм канала ID, узнать ID канала можно в @username_to_id_bot, "bot_token" токен вашего телеграм бота вы можете получить в @BotFather. И САМОЕ ГЛАВНОЕ добавьте бота в администраторы телеграм канала и предоставить все необходимые права.
 bot_token ="@BotFather"
 channel_link = "https://t.me/OFFpoliceChannel"
 channel_id = "@username_to_id_bot"
+photo_link = "https://t.me/AEh4oo/92"
+video_link = "https://t.me/AEh4oo/90"
